name:                janitor
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/khanage/janitor#readme
license:             BSD3
license-file:        LICENSE
author:              Khan Thompson
maintainer:          khanage@gmail.com
copyright:           2016 Khan Thompson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable janitor
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Import
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , ScopedTypeVariables
                     , NoImplicitPrelude
                     , FlexibleContexts
                     , RecordWildCards
  build-depends:       base >= 4.7 && < 5
                     , amazonka
                     , amazonka-ec2
                     , wreq
                     , lens
                     , classy-prelude
                     , text
                     , bytestring
